welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:49: error: ';' expected but 'else' found.
    else {
    ^